PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-122_if_else_condition_invalide/gcc-compile.txt
input.c:3:14: error: expected expression
    if (a == ) {
             ^
1 error generated.

return code: 1
